--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -23,7 +23,7 @@
             </li>
         </ul>
         <div class="footer-right-bar d-none d-md-block">
-            <a href="#" target='_blank'> joseandreshernandezross@gmail.com </a>
+            <a href="#" target='_blank'> contacto@andresjosehr.com </a>
         </div>
     </div>
 
