--- a/src/app/components/home/more-proyects/more-proyects.component.html
+++ b/src/app/components/home/more-proyects/more-proyects.component.html
@@ -15,7 +15,7 @@
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://andresjosehr.github.io/pokemon-angular" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://pokemonlist.andresjosehr.com" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
                                     <a style='color: inherit' href="https://github.com/andresjosehr/pokemon-angular" target="_blank"><i class="ml-4 fab fa-github"></i></a>                                    
                                 </div>
                                 <h5 class="other-proyect-title mt-4">Pokemon</h5>
@@ -41,7 +41,7 @@
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://andresjosehr.github.io/coming-soon-page/" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://comingsoonpage.andresjosehr.com/" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
                                     <a style='color: inherit' href="https://github.com/andresjosehr/coming-soon-page" target="_blank"><i class="ml-4 fab fa-github"></i></a>                                    
                                 </div>
                                 <h5 class="other-proyect-title mt-4">Coming soon page</h5>
@@ -68,7 +68,7 @@
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://andresjosehr.github.io/fourd-card-feature-section/" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://fourcardfeaturesection.andresjosehr.com/" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
                                     <a style='color: inherit' href="https://github.com/andresjosehr/fourd-card-feature-section" target="_blank"><i class="ml-4 fab fa-github"></i></a>                                    
                                 </div>
                                 <h5 class="other-proyect-title mt-4">Four card feature section</h5>
@@ -94,7 +94,7 @@
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://andresjosehr.github.io/testimonials-slider-app" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://testimonialsslider.andresjosehr.com/" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
                                     <a style='color: inherit' href="https://github.com/andresjosehr/testimonials-slider-app" target="_blank"><i class="ml-4 fab fa-github"></i></a>                                    
                                 </div>
                                 <h5 class="other-proyect-title mt-4">Testimonial slider</h5>
@@ -122,7 +122,7 @@
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://andresjosehr.github.io/article-preview-app" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://articlepreview.andresjosehr.com/" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
                                     <a style='color: inherit' href="https://github.com/andresjosehr/article-preview-app" target="_blank"><i class="ml-4 fab fa-github"></i></a>
                                 </div>
                                 <h5 class="other-proyect-title mt-4">Article preview</h5>
@@ -148,7 +148,7 @@
                                     <img  src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://andresjosehr.github.io/social-proof-section" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://socialproofsection.andresjosehr.com" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
                                     <a style='color: inherit' href="https://github.com/andresjosehr/social-proof-section" target="_blank"><i class="ml-4 fab fa-github"></i></a>
                                 </div>
                                 <h5 class="other-proyect-title mt-4">Social proof section</h5>
@@ -172,7 +172,7 @@
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://github.com/andresjosehr/faq-accordion" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://faqaccordion.andresjosehr.com" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
                                     <a style='color: inherit' href="https://andresjosehr.github.io/faq-accordion" target="_blank"><i class="ml-4 fab fa-github"></i></a>
                                 </div>
                                 <h5 class="other-proyect-title mt-4">FAQ accordion card</h5>
@@ -196,7 +196,7 @@
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://andresjosehr.github.io/profile-card-component" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://profilecard.andresjosehr.com" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
                                     <a style='color: inherit' href="https://github.com/andresjosehr/profile-card-component" target="_blank"><i class="ml-4 fab fa-github"></i></a>
                                 </div>
                                 <h5 class="other-proyect-title mt-4">Profile card</h5>
