--- a/src/app/components/home/proyects/proyects.component.html
+++ b/src/app/components/home/proyects/proyects.component.html
@@ -32,7 +32,7 @@
                             </ul>
                             <div class="proyect-links text-right">
                                 <a style='color: inherit' href="https://github.com/andresjosehr/agrourbana" target="_blank"><i class="ml-3 fab fa-github"></i></a>
-                                <a style='color: inherit' href="https://andresjosehr.github.io/agrourbana" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                                <a style='color: inherit' href="https://agrourbana.andresjosehr.com" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
                             </div>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                             </ul>
                             <div class="proyect-links text-left">
                                 <a style='color: inherit' href="https://github.com/andresjosehr/hands-game" target="_blank"><i class="ml-3 fab fa-github"></i></a>
-                                <a style='color: inherit' href="https://andresjosehr.github.io/hands-game" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                                <a style='color: inherit' href="https://handsgame.andresjosehr.com" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
                             </div>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                             </ul>
                             <div class="proyect-links text-right">
                                 <a style='color: inherit' href="https://github.com/andresjosehr/countries-viewer" target="_blank"><i class="ml-3 fab fa-github"></i></a>
-                                <a style='color: inherit' href="https://andresjosehr.github.io/countries-viewer" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                                <a style='color: inherit' href="https://countriesviewer.andresjosehr.com" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
                             </div>
                     </div>
                 </div>
