--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="div-btn-banner" >
-                <a href="mailto:joseandreshernandezross@gmail.com" target="_black" class="main-btn">¡Saludame!</a>
+                <a href="mailto:contacto@contacto.com" target="_black" class="main-btn">¡Saludame!</a>
             </div>
         </div>
     </div>
