Design bugs fixed

--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -2,28 +2,18 @@
     <div [@animateFooter]='state' *ngIf='state'>
         <ul class="footer-left-bar d-none d-md-block">
             <li>
-                <a href="#" target='_blank'>
+                <a href="https://github.com/andresjosehr" target='_blank'>
                     <i class="fab fa-github"></i>
                 </a>
             </li>
             <li>
-                <a href="#" target='_blank'>
+                <a href="https://www.linkedin.com/in/jose-andres-hernandez-ross-95683b106/" target='_blank'>
                     <i class="fab fa-linkedin-in"></i>
-                </a>
-            </li>
-            <li>
-                <a href="#" target='_blank'>
-                    <i class="fab fa-instagram"></i>
-                </a>
-            </li>
-            <li>
-                <a href="#" target='_blank'>
-                    <i class="fab fa-twitter"></i>
                 </a>
             </li>
         </ul>
         <div class="footer-right-bar d-none d-md-block">
-            <a href="#" target='_blank'> contacto@andresjosehr.com </a>
+            <a href="#" target='_blank'>contacto@andresjosehr.com </a>
         </div>
     </div>
 
