--- a/src/app/components/home/more-proyects/more-proyects.component.scss
+++ b/src/app/components/home/more-proyects/more-proyects.component.scss
@@ -94,3 +94,12 @@
     }
 
 }
+
+
+@media(max-width: 1300px){
+    .more-proyects{
+        .proyect-col{
+            height: auto;
+        }
+    }
+}
