--- a/src/app/components/home/proyects/proyects.component.html
+++ b/src/app/components/home/proyects/proyects.component.html
@@ -9,7 +9,7 @@
             
             <div class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
                 <div class="img-feature-proyect-container">
-                    <div>
+                    <div class="img-feature-proyect-box">
                         <img class='img-feature-proyect rounded' src="assets/images/agrourbana.png" alt="" width='600px'>
                     </div>
                 </div>
