Animations velocity fixed

--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -1,6 +1,6 @@
 <section class="section banner">
     <div class="container">
-        <div class="section-box-banner" [@aniBoton]='state' *ngIf='state'>
+        <div class="section-box-banner" [@bannerTrigger]='state' *ngIf='state'>
             <div class="content">
                 <div>
                     <h1>Hola, mi nombre es</h1>
