--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -1,5 +1,6 @@
 <footer>
-    <div [@animateFooter]='state' *ngIf='state'>
+    <!-- [@animateFooter] -->
+    <div>
         <ul class="footer-left-bar d-none d-md-block">
             <li>
                 <a href="https://github.com/andresjosehr" target='_blank'>
