--- a/src/app/components/home/about/about.component.html
+++ b/src/app/components/home/about/about.component.html
@@ -1,7 +1,7 @@
 <section class="section about" id='about'>
     <div class="container">
         <div class="section-box">
-            <div class="about-title" data-aos="fade-up">
+            <div class="about-title" disable-data-aos="fade-up">
                 <h3 class="section-title">
                     <span class='n-section-title'>01.</span> Acerca de mi
                 </h3>
@@ -9,32 +9,32 @@
             <div class="row">
                 <div class="col-12 col-md-6 mb-4 mb-md-0">
                     <div class="about-description">
-                        <p data-aos="fade-up" data-aos-duration="1000">
+                        <p disable-data-aos="fade-up" disable-data-aos-duration="1000">
                             En mis 4 años como desarrollador busco capacitarme cada día. Al
                             mismo tiempo he trabajado escribiendo pruebas unitarias, realizando integración continua y también cubriendo roles
                             de backend developer con Laravel, ExpressJS, Mysql y MongoDB. También he liderado equipos
                             teniendo empatía, ejerciendo motivación a compañeros y estableciendo planes y metas en conjunto.
                         </p>
-                        <p data-aos="fade-up" data-aos-duration="1000">
+                        <p disable-data-aos="fade-up" disable-data-aos-duration="1000">
                             Mis capacidades también incluyen implementar mejoras en sistemas, optimizar sitios, estandarizar patrones y 
                             sugerir y ejecutar ideas que añadan valor al proyecto en el que este trabajando
                         </p>
-                        <p data-aos="fade-up" data-aos-duration="1000">
+                        <p disable-data-aos="fade-up" disable-data-aos-duration="1000">
                             Algunas de las tecnologías en las que me he capacitado y trabajado incluyen (pero no se limitan) a:
                         </p>
-                        <ul class="skills-list" data-aos="fade-up">
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">Angular</li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">RxJS</li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">HTML &amp; (S)CSS</li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">Laravel</li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">Express</li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">WordPress</li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">Jasmine / Karma (TDD)</li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">CI / CD</li>
+                        <ul class="skills-list" disable-data-aos="fade-up">
+                            <li class="skill-element" disable-data-aos="fade-up" disable-data-aos-duration="1000">Angular</li>
+                            <li class="skill-element" disable-data-aos="fade-up" disable-data-aos-duration="1000">RxJS</li>
+                            <li class="skill-element" disable-data-aos="fade-up" disable-data-aos-duration="1000">HTML &amp; (S)CSS</li>
+                            <li class="skill-element" disable-data-aos="fade-up" disable-data-aos-duration="1000">Laravel</li>
+                            <li class="skill-element" disable-data-aos="fade-up" disable-data-aos-duration="1000">Express</li>
+                            <li class="skill-element" disable-data-aos="fade-up" disable-data-aos-duration="1000">WordPress</li>
+                            <li class="skill-element" disable-data-aos="fade-up" disable-data-aos-duration="1000">Jasmine / Karma (TDD)</li>
+                            <li class="skill-element" disable-data-aos="fade-up" disable-data-aos-duration="1000">CI / CD</li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 mt-4 mt-md-0 text-center" data-aos="fade-up" data-aos-duration="1000">
+                <div class="col-12 col-md-6 mt-4 mt-md-0 text-center" disable-data-aos="fade-up" disable-data-aos-duration="1000">
                     <div class="about-img-container">
                         <img class="rounded" width="300" height="300" src="assets/images/me.jpg" alt="José Andrés">
                     </div>
