--- a/src/app/components/home/more-proyects/more-proyects.component.html
+++ b/src/app/components/home/more-proyects/more-proyects.component.html
@@ -8,7 +8,7 @@
             </div>
             <div class="mt-5">
                 <div class="row p-0">
-                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" disable-data-aos="fade-up" disable-data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
@@ -34,7 +34,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" disable-data-aos="fade-up" disable-data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
@@ -61,7 +61,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" disable-data-aos="fade-up" disable-data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
@@ -87,7 +87,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" disable-data-aos="fade-up" disable-data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
@@ -115,7 +115,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" disable-data-aos="fade-up" disable-data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
@@ -141,7 +141,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" disable-data-aos="fade-up" disable-data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
@@ -165,7 +165,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" disable-data-aos="fade-up" disable-data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
@@ -189,7 +189,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" disable-data-aos="fade-up" disable-data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
