--- a/src/app/components/home/proyects/proyects.component.html
+++ b/src/app/components/home/proyects/proyects.component.html
@@ -1,13 +1,13 @@
 <section class="section proyects" id='proyects'>
     <div class="container">
         <div class="section-box">
-            <div data-aos="fade-up" data-aos-duration="1000">
+            <div disable-data-aos="fade-up" disable-data-aos-duration="1000">
                 <h3 class="section-title">
                     <span class='n-section-title'>03.</span> Mis proyectos
                 </h3>
             </div>
             
-            <div class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
+            <div class="d-flex proyect-container" disable-data-aos="fade-up" disable-data-aos-duration="1000">
                 <div class="img-feature-proyect-container">
                     <div class="img-feature-proyect-box">
                         <img class='img-feature-proyect rounded' src="assets/images/agrourbana.png" alt="" width='600px'>
@@ -38,7 +38,7 @@
                 </div>
             </div>
             
-            <div class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
+            <div class="d-flex proyect-container" disable-data-aos="fade-up" disable-data-aos-duration="1000">
                 <div class="proyect-info-left h-100" style="background-image: url('assets/images/hands-game.png')">
                     <div class="proyect-box">
                             <h4 class="text-left feature-proyect">Proyecto Destacado</h4>
@@ -63,14 +63,14 @@
                             </div>
                     </div>
                 </div>
-                <div class="img-feature-proyect-container" data-aos="fade-up" data-aos-duration="1000">
+                <div class="img-feature-proyect-container" disable-data-aos="fade-up" disable-data-aos-duration="1000">
                     <div class="img-feature-proyect-box">
                         <img class='img-feature-proyect rounded' src="assets/images/hands-game.png" alt="" width='600px'>
                     </div>
                 </div>
             </div>
             
-            <div class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
+            <div class="d-flex proyect-container" disable-data-aos="fade-up" disable-data-aos-duration="1000">
                 <div class="img-feature-proyect-container">
                     <div class="img-feature-proyect-box">
                         <img class='img-feature-proyect rounded' src="assets/images/countries-viewer.png" alt="" width='600px'>
