--- a/src/app/components/general/header/header.component.html
+++ b/src/app/components/general/header/header.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar main-navbar on-top" [class.nav-shadow]='this.pageYPosition>0' [@animateMenu]='state' *ngIf='state'>
+<!-- [@animateMenu] -->
+<nav class="navbar main-navbar on-top" [class.nav-shadow]='this.pageYPosition>0'>
   <div class="container">
     <a class="navbar-brand text-light" [routerLink]="'inicio'">
       <img src='assets/images/logo.png' width='25' />
