--- a/src/app/components/home/contact/contact.component.html
+++ b/src/app/components/home/contact/contact.component.html
@@ -1,17 +1,17 @@
 <section class="section contact" id='contact'>
     <div class="container">
         <div class="section-box">
-            <div class="mb-4" data-aos="fade-up" data-aos-duration="1000">
+            <div class="mb-4" disable-data-aos="fade-up" disable-data-aos-duration="1000">
                 <h3 class="contact-pre-title big-subtitle">05. Y... ¿Ahora?</h3>
                 <h4 class="e-font contact-title big-title">
                     ¡Saludame!
                 </h4>
             </div>
-            <p data-aos="fade-up" data-aos-duration="1000">
+            <p disable-data-aos="fade-up" disable-data-aos-duration="1000">
                 Estaré encantado de recibir tu contacto si quieres conversar acerca de nuevas oportunidades. Escríbeme, y te responderé tan pronto como vea tu mensaje.
             </p>
             <div class="mt-5">
-                <a href="mailto:contacto@andresjosehr.com" target="_blank" class="main-btn" data-aos="fade-up" data-aos-duration="1000">
+                <a href="mailto:contacto@andresjosehr.com" target="_blank" class="main-btn" disable-data-aos="fade-up" disable-data-aos-duration="1000">
                     Contacto
                 </a>
             </div>
