--- a/src/app/components/home/jobs/jobs.component.html
+++ b/src/app/components/home/jobs/jobs.component.html
@@ -1,12 +1,12 @@
 <section class="section jobs" id='jobs'>
     <div class="container">
         <div class="section-box">
-            <div class="about-title mb-5" data-aos="fade-up" data-aos-duration="1000">
+            <div class="about-title mb-5" disable-data-aos="fade-up" disable-data-aos-duration="1000">
                 <h3 class="e-font section-title">
                     <span class='code-font n-section-title'>02.</span> ¿Donde he trabajado?
                 </h3>
             </div>
-            <ngb-tabset class="jobs-tabs" data-aos="fade-up" data-aos-duration="1000">
+            <ngb-tabset class="jobs-tabs" disable-data-aos="fade-up" disable-data-aos-duration="1000">
               <ngb-tab title="Proyex">
                 <ng-template ngbTabContent>
                     <h4 class='title-tab-content'>Fullstack developer | <span class="company-tab-content">Proyex</span></h4>
